Remove now redundant permission checks

--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -25,7 +25,7 @@
         @Model.Item.Season.Name
         <h1 class="h2">
             @Model.Item.Name
-            @if(Model.CanEdit)
+            @if(Model.CanEditSeries)
             {
                 <a class="btn btn-sm btn-outline-primary"
                     asp-action="Edit"
