--- a/SailScores.Web/Views/Series/Index.cshtml
+++ b/SailScores.Web/Views/Series/Index.cshtml
@@ -32,7 +32,7 @@
 }
 
 <div class="container p-0 p-md-2">
-    @if (Model.CanEdit)
+    @if (Model.CanEditSeries)
     {
         <div class="row bg-almost">
             <div class="col-sm-3 my-2">
