Scroll wheel works in time pickers.

--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -204,7 +204,7 @@
                                     <label asp-for="StartTime" class="control-label col-3 col-md-4 col-form-label text-end">Start Time</label>
                                     <div class="col-9 col-md-8">
                                         <div class="input-group">
-                                            <input asp-for="StartTime" class="form-control time-picker" type="text" placeholder="HH:mm:ss" />
+                                            <input asp-for="StartTime" class="form-control time-picker" type="text" placeholder="hh:mm:ss AM/PM" />
                                             <button type="button" class="btn btn-outline-secondary" id="startNowButton" style="display:none;">Start Now</button>
                                         </div>
                                         <span asp-validation-for="StartTime" class="text-danger"></span>
@@ -264,8 +264,8 @@
                 </div>
                 <div class="d-flex flex-row gap-1">
                     <div>
-                        <input name="FinishTime" class="form-control form-control-sm finish-time-input time-picker" type="text" placeholder="HH:mm:ss"
-                                value="@(score.FinishTime.HasValue? score.FinishTime.Value.ToString(@"HH\:mm\:ss") : "")" />
+                        <input name="FinishTime" class="form-control form-control-sm finish-time-input time-picker" type="text" placeholder="hh:mm:ss AM/PM"
+                                value="@(score.FinishTime.HasValue? score.FinishTime.Value.ToString(@"hh\:mm\:ss tt") : "")" />
                         <span class="text-danger finish-time-error"></span>
                     </div>
                     <div>
@@ -445,7 +445,39 @@
                 dateFormat: "h:i:S K",
                 time_24hr: false,
                 enableSeconds: true,
-                allowInput: true
+                allowInput: true,
+                minuteIncrement: 1,
+                onReady: function (selectedDates, dateStr, instance) {
+                    const handleWheel = (e) => {
+                        console.log("Flatpickr wheel event", { target: e.target, currentTarget: e.currentTarget, deltaY: e.deltaY });
+                        e.preventDefault();
+                        const delta = e.deltaY > 0 ? -1 : 1;
+                        let current = instance.latestSelectedDateObj ? new Date(instance.latestSelectedDateObj) : new Date();
+                        if (isNaN(current.getTime())) {
+                            current = new Date();
+                            current.setHours(0, 0, 0, 0);
+                        }
+
+                        if (e.currentTarget === instance.hourElement) {
+                            console.log("Changing hour", { from: current.getHours(), delta: delta });
+                            current.setHours(current.getHours() + delta);
+                            instance.setDate(current, true);
+                        } else if (e.currentTarget === instance.minuteElement) {
+                            console.log("Changing minute", { from: current.getMinutes(), delta: delta });
+                            current.setMinutes(current.getMinutes() + delta);
+                            instance.setDate(current, true);
+                        } else if (e.currentTarget === instance.secondElement) {
+                            console.log("Changing second", { from: current.getSeconds(), delta: delta });
+                            current.setSeconds(current.getSeconds() + delta);
+                            instance.setDate(current, true);
+                        }
+                    };
+                    instance.hourElement.addEventListener("wheel", handleWheel);
+                    instance.minuteElement.addEventListener("wheel", handleWheel);
+                    if (instance.secondElement) {
+                        instance.secondElement.addEventListener("wheel", handleWheel);
+                    }
+                }
             });
         });
     </script>
