News blurb added.

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -54,6 +54,20 @@
         <script type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; fnames[6] = 'MMERGE6'; ftypes[6] = 'text'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
     </div>
     <hr />
+    <h3>February 15th, 2026</h3>
+    <h5>New Permission Levels</h5>
+    <p>
+        SailScores has two new permission levels for users: <strong>Series Scorekeeper</strong> and <strong>Race Scorekeeper</strong> can be
+        assigned at the club level.
+        These new roles limit access to club management features but both can add and edit competitors and race results. Series Scorekeepers
+        can also create and edit series. The existing <strong>Club Administrator</strong> role still works, allowing full access to club
+        management.
+    </p>
+    <p>
+        Existing users kept the Club Admin level.
+        </p>
+
+    <br />
     <h3>January 1st, 2026</h3>
     <h5>&#x1F389; Supporters &amp; Growth &#x1F389;</h5>
     <p>
