--- a/SailScores.Web/Views/Competitor/Details.cshtml
+++ b/SailScores.Web/Views/Competitor/Details.cshtml
@@ -59,6 +59,44 @@
     </div>
     }
 </div>
+
+@if (Model.Item.SeasonStats != null && Model.Item.SeasonStats.Any())
+{
+    <div class="row mt-4">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-header">
+                    <h5 class="card-title mb-0">Performance by Wind Conditions</h5>
+                </div>
+                <div class="card-body">
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="windSeasonSelect" class="form-label">Season:</label>
+                            <select id="windSeasonSelect" class="form-select">
+                                <option value="">All Seasons</option>
+                                @foreach (var season in Model.Item.SeasonStats.Where(s => s.RaceCount > 0))
+                                {
+                                    <option value="@season.SeasonUrlName">@season.SeasonName</option>
+                                }
+                            </select>
+                        </div>
+                        <div class="col-md-6 d-flex align-items-end">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="groupByDirection">
+                                <label class="form-check-label" for="groupByDirection">
+                                    Group by wind direction
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="windStatsChart" style="width: 100%; height: 400px;"></div>
+                    <div id="windStatsTable" class="mt-3"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
 <div class="row">
     <div class="col-12">
         Statistics may not include all series.
@@ -69,4 +107,14 @@
 @section Scripts {
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.12.0/d3.min.js" integrity="sha256-+9Mf3cAVmxxudDsr1XwXUeRZFtvdWVYdq5/vcgiYyNU=" crossorigin="anonymous"></script>
     <script src="~/js/competitorStatsChart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js" crossorigin="anonymous"></script>
+    <script src="~/js/competitorWindStats.js" asp-append-version="true"></script>
+    <script>
+        (function() {
+            const competitorId = '@Model.Item.Id';
+            if (typeof initCompetitorWindStats === 'function') {
+                initCompetitorWindStats(competitorId);
+            }
+        })();
+    </script>
 }
