Hide Backup nav

--- a/SailScores.Web/Views/Admin/Index.cshtml
+++ b/SailScores.Web/Views/Admin/Index.cshtml
@@ -51,10 +51,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#scorekeepers">Scorekeepers</a>
                     </li>
-                    <li class="nav-item">
+@*                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Backup"
                            asp-action="Index">Backup &amp; Restore</a>
-                    </li>
+                    </li> *@
                 }
                 <li class="nav-item">
                     <a class="nav-link" asp-controller="Reports"
